 - Removed the French and Chinese localizations, which have not been maintained.
   If you are interested in bringing these localizations back, please contact
   Minh.
 - Improved the security of the Script Monitor and Silverlight support.
 - Added support for the HTML5 search box, URL, and e-mail address controls.
 - Shift+Backspace (Shift+Del on the Mac) now removes a diacritical mark from
   the preceding word like GoTiengVietFx does.
 - Added support for multiline selection in Komodo IDE and Komodo Edit.
 - Added support for Ace, the successor to Bespin.
 - Added support for 280 Slides.
 - Moved the Mudim compatibility warning from AVIM's preferences dialog to the
   main Add-ons window. (The compatibility warning is not available in Firefox
   4.)
 - Added a help button to the preferences dialog that opens AVIM help
   documentation in a new window.
 - The Script Monitor can now disable Google Virtual Keyboard in webpages.
 - Added a button to Fennec's right toolbar for enabling and disabling AVIM.
 - Fixed the input method menu in the options panel in Fennec.
 - Added an option to recognize password boxes to the options panel in Fennec.
 - Fixed a regression in SeaMonkey where icons would not appear for the toolbar
   buttons except in the Customize Toolbar dialog.

Version ${Version} (${Date})
 - Added support for editing Google Docs text documents created in June 2010 or
   later (requires Firefox 4 or equivalent).
 - Added a Vietnamese Input menu under the Firefox menu (Windows and Linux).
 - Fixed an issue in rich text controls where selecting text and pressing
   Backspace would delete one character too many.
 - Added a Brazilian Portuguese localization by Mauro José da Silva.
 - Added support for Zoho Writer.
 - Added support for Eclipse's Orion editor.
 - Added support for Ymacs, an emacs-style code editor.
 - Fixed an issue in Ace and 280 Slides editors that in some cases caused the
   current line to be executed as unprivileged JavaScript code.